--- a/index.html
+++ b/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <main>
+    <div class="car-model-main-box">
+      <div class="each-car-box Sedans">
+        <div class="car-class-photo"> <img src="images/icon-sedans.svg" alt="seda car"></div>
+        <div class="car-class-name">
+          <h3>Sedans</h3>
+        </div>
+        <div class="car-class-description">
+          <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+            or on your next road trip.</p>
+        </div>
+        <div class="learn-more"><Span>Learn More</Span></div>
+      </div>
+      <div class="each-car-box SUVv">
+        <div class="car-class-photo"><img src="images/icon-suvs.svg" alt="suv car"></div>
+        <div class="car-class-name">
+          <h3>SUVs</h3>
+        </div>
+        <div class="car-class-description">
+          <p> Take an SUV for its spacious interior, power, and versatility. Perfect for
+            your next family vacation
+            and off-road adventures.</p>
+        </div>
+        <div class="learn-more"><Span>Learn More</Span></div>
+      </div>
+      <div class="car-box-container">
+        <div class="each-car-box Luxury">
+          <div class="car-class-photo"><img src="images/icon-luxury.svg" alt="luxury car"></div>
+          <div class="car-class-name">
+            <h3>Luxury</h3>
+          </div>
+          <div class="car-class-description">
+            <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+              rental and arrive in style.</p>
+          </div>
+          <div class="learn-more"><Span>Learn More</Span></div>
+        </div>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      </div>
+  </main>
+  <!-- <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer> -->
 </body>
+
 </html>
